src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: monorepo-nmspc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /home/
            pathType: Exact
            backend:
              service:
                name: apps-home-service
                port:
                  number: 8080
          - path: /settings
            pathType: Prefix
            backend:
              service:
                name: apps-settings-service
                port:
                  number: 8080
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: apps-user-service
                port:
                  number: 8080
